# sdr-o-ran-platform

./: .coveragerc  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  100-PERCENT-COMPLETION-GUIDE.md  AGENT-4-COMPLETION-SUMMARY.md  AGENT2-FINAL-REPORT.md  ARCHITECTURE-COMPLIANCE-REPORT.md  CHANGELOG.md  CITATION.cff  CLEANUP-REPORT.md  COMPLETE-PROJECT-ARCHITECTURE-AND-ROADMAP.md  DEPLOY-NOW.ps1  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-IN-PROGRESS.md  DEPLOYMENT-WSL2-GPU.md  DEVELOPMENT-PLAN.md  FINAL-PROJECT-COMPLETION-REPORT.md  FINAL-STAGE-1-SUMMARY.md  FINAL-TEST-REPORT.md  GAP-ANALYSIS-AND-FUTURE-RESEARCH.md  GPU-NTN-IMPLEMENTATION-PROOF.md  IMPLEMENTATION-SESSION-2-SUMMARY.md  KNOWN-ISSUES.md  LEO-SDR-INTEGRATION-REPORT.md  LEO-SDR-整合實施報告.md  MONITORING-DEPLOYMENT-REPORT.md  NIGHT-DEPLOYMENT-STATUS.md  NTN-RESEARCH-NEXT-STEPS.md  NTN-TERRESTRIAL-INTEGRATION-ARCHITECTURE.md  PLATFORM-STATUS-UPDATE.md  PQC-FIX-SUMMARY.md  PROGRESS-TRACKER.md  PROJECT-COMPLETION-SUMMARY.md  PROJECT-STATUS-ANALYSIS.md  QUICK-START-GUIDE.md  README.md  RESEARCH-PROPOSAL-NTN-GPU-SIMULATION.md  (+13 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-build.yml
00-MBSE-Models/requirements/: system-requirements-model.md
01-Architecture-Analysis/: comparison-matrix.md
02-Technical-Specifications/: interface-specifications.md  ntn-3gpp-compliance.md  oran-specifications.md  sdr-specifications.md  system-requirements.md
03-Implementation/ai-ml-pipeline/: Dockerfile.drl-trainer
03-Implementation/ntn-simulation/: FILE-ORGANIZATION-SUMMARY.md  PERFECT-COMPLETION.txt  PROJECT-FILE-INDEX.md  QUICKSTART.md  README.md  RL-FINAL-STATUS-V2.txt  RL-RESTRUCTURING-REPORT.md  ROOT-CLEANUP-ANALYSIS.md  TRAINING-RESULTS-REPORT.md  requirements.txt
03-Implementation/ric-platform/: AGENT2_COMPLETION_REPORT.md  ARCHITECTURE.md  PROJECT_STATISTICS.md  QUICK_REFERENCE.md  README.md  requirements.txt
03-Implementation/sdr-platform/: Dockerfile.sdr-gateway
03-Implementation/simulation/: Dockerfile.leo-simulator  leo_ntn_simulator.py  test_zmq_receiver.py
04-Deployment/: KUBERNETES-DEPLOYMENT-GUIDE.md
04-Deployment/ci-cd/: .bandit.yml  .gitlab-ci.yml  .pylintrc  ARCHITECTURE.md  DEPLOYMENT-SUMMARY.md  QUICKSTART.md  README.md  argocd-application.yaml  k6-performance-test.js  setup-cicd.sh
04-Deployment/docker/: Dockerfile.flexric  build-images.sh  e2-interface.Dockerfile  xapp-handover.Dockerfile  xapp-qos.Dockerfile
04-Deployment/infrastructure/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  user-data.sh  variables.tf
04-Deployment/kubernetes/: deploy-all.sh  e2-interface-deployment.yaml  grafana-values.yaml  grpc-server-deployment.yaml  monitoring-stack.yaml  namespace.yaml  prometheus-values.yaml  redis-cluster.yaml  redis-deployment.yaml  xapp-handover-deployment.yaml  xapp-qos-deployment.yaml
04-Deployment/monitoring/: OVERVIEW.md  README.md  loki-config.yml  prometheus-rules.yml  servicemonitor.yml
04-Deployment/prometheus/: prometheus.yml
05-Documentation/: deep-dive-technical-analysis.md  whitepaper.md
05-Documentation/monitoring-dashboards/: README.md  sdr-platform-overview.json
06-Deployment-Operations/: deployment-guide.md  operations-guide.md
06-References/research-papers/: README.md
06-References/standards/: README.md
06-References/vendor-docs/: README.md
07-Legacy-Docs/: SDR Platform -低軌衛星地面接收站的解決方案.md
08-Paper-Submission/IEEE-COMSM-6G-from-Sky/: BUILD_INSTRUCTIONS.md  FIGURES_GUIDE.md  GENERATION_COMPLETE.md  PACKAGE_MANIFEST.md  README.md  SUBMISSION_CHECKLIST.md  build_pdf.bat  build_pdf.sh  cover_letter.html  cover_letter.md  generate_cover_letter_html.py  generate_cover_letter_pdf.py  generate_html_pdf.py  generate_pdf.py  paper.md  paper_full.html  paper_preview.html  references.bib
docs/: README.md
docs/deployment/: README.md  (+9 more)
mcp-gateway/: Dockerfile  registry.yaml
scripts/: README.md  auto-deploy.sh  health_check.sh  monitor.sh  quick-start.sh  run_benchmarks.sh  run_integration_tests.sh  setup-k8s-namespaces.sh  stop-all.sh  test-all.sh
tests/: __init__.py  conftest.py
(+375 files in other folders)
